--- a/tdtt_buoi3_TranMauGiaKhanh_25021830.ipynb
+++ b/tdtt_buoi3_TranMauGiaKhanh_25021830.ipynb
@@ -9,6 +9,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Dao nguoc so\n",
     "chuoi_nhap_vao = str(input())\n",
     "chuoi_dao_nguoc = chuoi_nhap_vao[::-1]\n",
     "so_dao_nguoc = int(chuoi_dao_nguoc)\n",
@@ -35,6 +36,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# bitwise hoan gia tri\n",
     "a,b = map(int,input().split())\n",
     "a = a^b\n",
     "b = b^a\n",
@@ -62,6 +64,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Tim luy thua cua 2\n",
     "n = int(input())\n",
     "a = n & (n-1)\n",
     "if a == 0:\n",
@@ -90,6 +93,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Lam tron phep chia\n",
     "import math\n",
     "a , b = map(float, input().split())\n",
     "print(math.floor(a/b))"
@@ -115,6 +119,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Lam tron phep du 1\n",
     "import math\n",
     "\n",
     "a, b = map(float, input().split())\n",
@@ -141,6 +146,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Chan le\n",
     "a = int(input())\n",
     "if a % 2 == 0:\n",
     "    print(\"Even\")\n",
@@ -168,6 +174,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Dieu kien cu the\n",
     "a = int(input())\n",
     "b = int(input())\n",
     "if a < 0 and b < 0 :\n",
@@ -196,6 +203,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# So sanh do dai chuoi\n",
     "a = str(input())\n",
     "b = str(input())\n",
     "c = len(a)\n",
@@ -226,6 +234,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# kiem tra tam giac\n",
     "a = int(input())\n",
     "b = int(input())\n",
     "c = int(input())\n",
@@ -258,6 +267,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Tim max\n",
     "a = int(input())\n",
     "b = int(input())\n",
     "c = int(input())\n",
@@ -285,6 +295,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Kiem tra tam giac 1\n",
     "a = int(input())\n",
     "b = int(input())\n",
     "c = int(input())\n",
@@ -328,6 +339,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Nam nhuan\n",
     "a = int(input())\n",
     "if a % 4 == 0 and a % 100 != 0:\n",
     "    print(\"Yes\")\n",
@@ -357,6 +369,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Tien dien\n",
     "a = int(input())\n",
     "if a >= 0 and a <= 50 :\n",
     "    print(1500*a)\n",
@@ -386,6 +399,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Giai phuong trinh bac nhat\n",
     "a = float(input())\n",
     "b = float(input())\n",
     "if a == 0 and b == 0:\n",
@@ -418,6 +432,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Ket qua hoc tap\n",
     "a = float(input())\n",
     "if a >= 0 and a <= 10:\n",
     "    if a >= 8.0 :\n",
@@ -446,54 +461,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-06T04:54:58.989074Z",
-     "start_time": "2025-10-06T04:54:54.622392Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "a = float(input())\n",
-    "if a == 0:\n",
-    "    b = int(a)\n",
-    "    print(b , b, b, sep = \" \")\n",
-    "if a > 0 :\n",
-    "    print(int(a)+1)\n",
-    "    print(int(a))\n",
-    "    if a - int(a) > 0.5:\n",
-    "        print(int(a)+1)\n",
-    "    elif a - int(a) < 0.5:\n",
-    "        print(int(a))\n",
-    "if a < 0 :\n",
-    "    print(int(a)-1)\n",
-    "    print(int(a))\n",
-    "    if a*-1 - int(a*-1) >0.5:\n",
-    "        print(int(a))\n",
-    "    if a *-1 - int(a*-1) <0.5:\n",
-    "        print(int(a)+1)"
-   ],
-   "id": "50c1221223791dc1",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-6\n",
-      "-5\n",
-      "-5\n"
-     ]
-    }
-   ],
-   "execution_count": 93
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2025-10-06T06:49:25.736766Z",
      "start_time": "2025-10-06T06:49:22.465392Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "#Lam tron\n",
     "a = float(input())\n",
     "def ceil():\n",
     "    while True:\n",
