--- a/buoi 5.ipynb
+++ b/buoi 5.ipynb
@@ -243,8 +243,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T01:56:18.718265Z",
-     "start_time": "2025-12-03T01:56:16.912871Z"
+     "end_time": "2025-12-03T07:11:10.997343Z",
+     "start_time": "2025-12-03T07:11:09.064752Z"
     }
    },
    "cell_type": "code",
@@ -271,12 +271,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b101\n",
       "2\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 16
   },
   {
    "metadata": {
@@ -316,12 +315,51 @@
    "execution_count": 46
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-09T17:10:31.996887Z",
+     "start_time": "2025-12-09T17:10:29.281966Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "#W5A10",
-   "id": "60c5ea8db163c7b6"
+   "source": [
+    "#W5A10\n",
+    "def anh_xa(strA,strB):\n",
+    "    k = {}\n",
+    "    l = {}\n",
+    "\n",
+    "\n",
+    "    for i in range(0,len(strA)):\n",
+    "        chA = strA[i]\n",
+    "        chB = strB[i]\n",
+    "        if chA not in k:\n",
+    "            k[chA] = chB\n",
+    "        else:\n",
+    "            if chA != chB:\n",
+    "                return False\n",
+    "    for i in range(0,len(strA)):\n",
+    "        chA = strA[i]\n",
+    "        chB = strB[i]\n",
+    "        if chB not in k:\n",
+    "            l[chB] = chA\n",
+    "        else:\n",
+    "            if chB != chA:\n",
+    "                return False\n",
+    "    return True\n",
+    "strA,strB = input().split()\n",
+    "print(anh_xa(strA,strB))"
+   ],
+   "id": "e1f129fd4676be4a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   }
  ],
  "metadata": {
